# xmonad-log-applet

./: .gitignore  Makefile.in  README.md  configure.ac  main.c  xmonad-log-applet.desktop.in  xmonad-log-applet.spec  xmonad.hs.example
